// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`strict tool schema characterization (API-3) > custom tools > BaseProvider (Chat Completions providers) output is unchanged 1`] = `
"[
  {
    "type": "function",
    "function": {
      "name": "custom_tool",
      "parameters": {
        "type": "object",
        "additionalProperties": false,
        "properties": {
          "command": {
            "type": "string"
          },
          "cwd": {
            "type": "string"
          },
          "either": {
            "type": [
              "string",
              "number"
            ]
          },
          "nested": {
            "type": "object",
            "properties": {
              "inner": {
                "type": "number"
              }
            },
            "additionalProperties": false,
            "required": [
              "inner"
            ]
          },
          "plain": {
            "type": "object",
            "properties": {
              "deep": {
                "type": "object",
                "properties": {
                  "leaf": {
                    "type": "boolean"
                  }
                },
                "additionalProperties": false,
                "required": [
                  "leaf"
                ]
              }
            },
            "additionalProperties": false,
            "required": [
              "deep"
            ]
          },
          "list": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "mode": {
                  "type": "string"
                }
              },
              "additionalProperties": false,
              "required": [
                "mode"
              ]
            }
          },
          "objects": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "id": {
                  "type": "string"
                }
              },
              "required": [
                "id"
              ],
              "additionalProperties": false
            }
          }
        },
        "required": [
          "command",
          "cwd",
          "either",
          "nested",
          "plain",
          "list",
          "objects"
        ]
      },
      "strict": true
    }
  }
]"
`;

exports[`strict tool schema characterization (API-3) > custom tools > OpenAiCodexHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "custom_tool",
    "parameters": {
      "type": "object",
      "additionalProperties": false,
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "either": {
          "type": [
            "string",
            "number",
            "null"
          ]
        },
        "nested": {
          "type": [
            "object",
            "null"
          ],
          "properties": {
            "inner": {
              "type": [
                "number",
                "null"
              ]
            }
          }
        },
        "plain": {
          "type": "object",
          "properties": {
            "deep": {
              "type": "object",
              "properties": {
                "leaf": {
                  "type": [
                    "boolean",
                    "null"
                  ]
                }
              },
              "additionalProperties": false,
              "required": [
                "leaf"
              ]
            }
          },
          "additionalProperties": false,
          "required": [
            "deep"
          ]
        },
        "list": {
          "type": [
            "array",
            "null"
          ],
          "items": {
            "type": "object",
            "properties": {
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            }
          }
        },
        "objects": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string"
              }
            },
            "required": [
              "id"
            ],
            "additionalProperties": false
          }
        }
      },
      "required": [
        "command",
        "cwd",
        "either",
        "nested",
        "plain",
        "list",
        "objects"
      ]
    },
    "strict": true
  }
]"
`;

exports[`strict tool schema characterization (API-3) > custom tools > OpenAiNativeHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "custom_tool",
    "parameters": {
      "type": "object",
      "additionalProperties": false,
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "either": {
          "type": [
            "string",
            "number",
            "null"
          ]
        },
        "nested": {
          "type": [
            "object",
            "null"
          ],
          "properties": {
            "inner": {
              "type": [
                "number",
                "null"
              ]
            }
          }
        },
        "plain": {
          "type": "object",
          "properties": {
            "deep": {
              "type": "object",
              "properties": {
                "leaf": {
                  "type": [
                    "boolean",
                    "null"
                  ]
                }
              },
              "additionalProperties": false,
              "required": [
                "leaf"
              ]
            }
          },
          "additionalProperties": false,
          "required": [
            "deep"
          ]
        },
        "list": {
          "type": [
            "array",
            "null"
          ],
          "items": {
            "type": "object",
            "properties": {
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            }
          }
        },
        "objects": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "id": {
                "type": "string"
              }
            },
            "required": [
              "id"
            ],
            "additionalProperties": false
          }
        }
      },
      "required": [
        "command",
        "cwd",
        "either",
        "nested",
        "plain",
        "list",
        "objects"
      ]
    },
    "strict": true
  }
]"
`;

exports[`strict tool schema characterization (API-3) > mcp tools > BaseProvider (Chat Completions providers) output is unchanged 1`] = `
"[
  {
    "type": "function",
    "function": {
      "name": "mcp--github--get_issue",
      "parameters": {
        "type": "object",
        "properties": {
          "owner": {
            "type": "string"
          },
          "repo": {
            "type": "string"
          },
          "number": {
            "type": "number"
          },
          "state": {
            "anyOf": [
              {
                "type": "string"
              },
              {
                "type": "null"
              }
            ]
          }
        },
        "required": [
          "owner",
          "repo",
          "number"
        ],
        "additionalProperties": false
      },
      "strict": false
    }
  },
  {
    "type": "function",
    "function": {
      "name": "mcp--github--create_issue",
      "parameters": {
        "type": "object",
        "properties": {
          "title": {
            "type": "string"
          },
          "labels": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "name": {
                  "type": "string"
                },
                "color": {
                  "type": "string"
                }
              },
              "required": [
                "name"
              ],
              "additionalProperties": false
            }
          },
          "meta": {
            "type": "object",
            "properties": {
              "milestone": {
                "type": "number"
              }
            },
            "additionalProperties": false
          }
        },
        "required": [
          "title"
        ],
        "additionalProperties": false
      },
      "strict": false
    }
  },
  {
    "type": "function",
    "function": {
      "name": "mcp--github--get_me",
      "parameters": {
        "type": "object",
        "additionalProperties": false
      },
      "strict": false
    }
  }
]"
`;

exports[`strict tool schema characterization (API-3) > mcp tools > OpenAiCodexHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "mcp--github--get_issue",
    "parameters": {
      "type": "object",
      "properties": {
        "owner": {
          "type": "string"
        },
        "repo": {
          "type": "string"
        },
        "number": {
          "type": "number"
        },
        "state": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "required": [
        "owner",
        "repo",
        "number"
      ],
      "additionalProperties": false
    },
    "strict": false
  },
  {
    "type": "function",
    "name": "mcp--github--create_issue",
    "parameters": {
      "type": "object",
      "properties": {
        "title": {
          "type": "string"
        },
        "labels": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "name": {
                "type": "string"
              },
              "color": {
                "type": "string"
              }
            },
            "required": [
              "name"
            ],
            "additionalProperties": false
          }
        },
        "meta": {
          "type": "object",
          "properties": {
            "milestone": {
              "type": "number"
            }
          },
          "additionalProperties": false
        }
      },
      "required": [
        "title"
      ],
      "additionalProperties": false
    },
    "strict": false
  },
  {
    "type": "function",
    "name": "mcp--github--get_me",
    "parameters": {
      "type": "object",
      "additionalProperties": false
    },
    "strict": false
  }
]"
`;

exports[`strict tool schema characterization (API-3) > mcp tools > OpenAiNativeHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "mcp--github--get_issue",
    "parameters": {
      "type": "object",
      "properties": {
        "owner": {
          "type": "string"
        },
        "repo": {
          "type": "string"
        },
        "number": {
          "type": "number"
        },
        "state": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "required": [
        "owner",
        "repo",
        "number"
      ],
      "additionalProperties": false
    },
    "strict": false
  },
  {
    "type": "function",
    "name": "mcp--github--create_issue",
    "parameters": {
      "type": "object",
      "properties": {
        "title": {
          "type": "string"
        },
        "labels": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "name": {
                "type": "string"
              },
              "color": {
                "type": "string"
              }
            },
            "required": [
              "name"
            ],
            "additionalProperties": false
          }
        },
        "meta": {
          "type": "object",
          "properties": {
            "milestone": {
              "type": "number"
            }
          },
          "additionalProperties": false
        }
      },
      "required": [
        "title"
      ],
      "additionalProperties": false
    },
    "strict": false
  },
  {
    "type": "function",
    "name": "mcp--github--get_me",
    "parameters": {
      "type": "object",
      "additionalProperties": false
    },
    "strict": false
  }
]"
`;

exports[`strict tool schema characterization (API-3) > native tools > BaseProvider (Chat Completions providers) output is unchanged 1`] = `
"[
  {
    "type": "function",
    "function": {
      "name": "access_mcp_resource",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "server_name": {
            "type": "string"
          },
          "uri": {
            "type": "string"
          }
        },
        "required": [
          "server_name",
          "uri"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "apply_diff",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "diff": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "diff"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "apply_patch",
      "parameters": {
        "type": "object",
        "properties": {
          "patch": {
            "type": "string"
          }
        },
        "required": [
          "patch"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "ask_followup_question",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "question": {
            "type": "string"
          },
          "follow_up": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "text": {
                  "type": "string"
                },
                "mode": {
                  "type": "string"
                }
              },
              "required": [
                "text",
                "mode"
              ],
              "additionalProperties": false
            },
            "minItems": 1,
            "maxItems": 4
          }
        },
        "required": [
          "question",
          "follow_up"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "attempt_completion",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "result": {
            "type": "string"
          }
        },
        "required": [
          "result"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "codebase_search",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          },
          "path": {
            "type": "string"
          }
        },
        "required": [
          "query",
          "path"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "execute_command",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "command": {
            "type": "string"
          },
          "cwd": {
            "type": "string"
          },
          "timeout": {
            "type": "number"
          }
        },
        "required": [
          "command",
          "cwd",
          "timeout"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "generate_image",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "prompt": {
            "type": "string"
          },
          "path": {
            "type": "string"
          },
          "image": {
            "type": "string"
          }
        },
        "required": [
          "prompt",
          "path",
          "image"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "list_files",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "recursive": {
            "type": "boolean"
          }
        },
        "required": [
          "path",
          "recursive"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "new_task",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "mode": {
            "type": "string"
          },
          "message": {
            "type": "string"
          },
          "todos": {
            "type": "string"
          }
        },
        "required": [
          "mode",
          "message",
          "todos"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "read_artifact",
      "parameters": {
        "type": "object",
        "properties": {
          "artifact_id": {
            "type": "string"
          },
          "search": {
            "type": "string"
          },
          "offset": {
            "type": "number"
          },
          "limit": {
            "type": "number"
          }
        },
        "required": [
          "artifact_id",
          "search",
          "offset",
          "limit"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "read_file",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "mode": {
            "type": "string",
            "enum": [
              "slice",
              "indentation"
            ]
          },
          "offset": {
            "type": "integer"
          },
          "limit": {
            "type": "integer"
          },
          "indentation": {
            "type": "object",
            "properties": {
              "anchor_line": {
                "type": "integer"
              },
              "max_levels": {
                "type": "integer"
              },
              "include_siblings": {
                "type": "boolean"
              },
              "include_header": {
                "type": "boolean"
              },
              "max_lines": {
                "type": "integer"
              }
            },
            "required": [
              "anchor_line",
              "max_levels",
              "include_siblings",
              "include_header",
              "max_lines"
            ],
            "additionalProperties": false
          }
        },
        "required": [
          "path",
          "mode",
          "offset",
          "limit",
          "indentation"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "run_parallel_tasks",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "subtasks": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "message": {
                  "type": "string"
                },
                "mode": {
                  "type": "string"
                }
              },
              "required": [
                "message",
                "mode"
              ],
              "additionalProperties": false
            }
          },
          "maxConcurrency": {
            "type": "number"
          }
        },
        "required": [
          "subtasks",
          "maxConcurrency"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "run_slash_command",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "command": {
            "type": "string"
          },
          "args": {
            "type": "string"
          }
        },
        "required": [
          "command",
          "args"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "skill",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "skill": {
            "type": "string"
          },
          "args": {
            "type": "string"
          }
        },
        "required": [
          "skill",
          "args"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_replace",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "edit_file",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          },
          "expected_replacements": {
            "type": "number",
            "minimum": 1
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string",
          "expected_replacements"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "edit",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          },
          "replace_all": {
            "type": "boolean",
            "default": false
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string",
          "replace_all"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_files",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "regex": {
            "type": "string"
          },
          "file_pattern": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "regex",
          "file_pattern"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "switch_mode",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "mode_slug": {
            "type": "string"
          },
          "reason": {
            "type": "string"
          }
        },
        "required": [
          "mode_slug",
          "reason"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "tools_load",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "names": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "minItems": 1
          }
        },
        "required": [
          "names"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "update_todo_list",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "todos": {
            "type": "string"
          }
        },
        "required": [
          "todos"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "web_fetch",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "url": {
            "type": "string"
          }
        },
        "required": [
          "url"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "web_search",
      "parameters": {
        "type": "object",
        "properties": {
          "queries": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "minItems": 1,
            "maxItems": 4
          }
        },
        "required": [
          "queries"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "write_to_file",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "content": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "content"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_task_history",
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          },
          "max_results": {
            "type": "number"
          }
        },
        "required": [
          "query",
          "max_results"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  }
]"
`;

exports[`strict tool schema characterization (API-3) > native tools > OpenAiCodexHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "access_mcp_resource",
    "parameters": {
      "type": "object",
      "properties": {
        "server_name": {
          "type": "string"
        },
        "uri": {
          "type": "string"
        }
      },
      "required": [
        "server_name",
        "uri"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_diff",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "diff": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "diff"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_patch",
    "parameters": {
      "type": "object",
      "properties": {
        "patch": {
          "type": "string"
        }
      },
      "required": [
        "patch"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "ask_followup_question",
    "parameters": {
      "type": "object",
      "properties": {
        "question": {
          "type": "string"
        },
        "follow_up": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "text": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "text",
              "mode"
            ],
            "additionalProperties": false
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "question",
        "follow_up"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "attempt_completion",
    "parameters": {
      "type": "object",
      "properties": {
        "result": {
          "type": "string"
        }
      },
      "required": [
        "result"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "codebase_search",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "path": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "query",
        "path"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "execute_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "timeout": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "cwd",
        "timeout"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "generate_image",
    "parameters": {
      "type": "object",
      "properties": {
        "prompt": {
          "type": "string"
        },
        "path": {
          "type": "string"
        },
        "image": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "prompt",
        "path",
        "image"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "list_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "recursive": {
          "type": "boolean"
        }
      },
      "required": [
        "path",
        "recursive"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "new_task",
    "parameters": {
      "type": "object",
      "properties": {
        "mode": {
          "type": "string"
        },
        "message": {
          "type": "string"
        },
        "todos": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "mode",
        "message",
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_artifact",
    "parameters": {
      "type": "object",
      "properties": {
        "artifact_id": {
          "type": "string"
        },
        "search": {
          "type": "string"
        },
        "offset": {
          "type": "number"
        },
        "limit": {
          "type": "number"
        }
      },
      "required": [
        "artifact_id",
        "search",
        "offset",
        "limit"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "mode": {
          "type": "string",
          "enum": [
            "slice",
            "indentation"
          ]
        },
        "offset": {
          "type": "integer"
        },
        "limit": {
          "type": "integer"
        },
        "indentation": {
          "type": "object",
          "properties": {
            "anchor_line": {
              "type": "integer"
            },
            "max_levels": {
              "type": "integer"
            },
            "include_siblings": {
              "type": "boolean"
            },
            "include_header": {
              "type": "boolean"
            },
            "max_lines": {
              "type": "integer"
            }
          },
          "required": [
            "anchor_line",
            "max_levels",
            "include_siblings",
            "include_header",
            "max_lines"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "path",
        "mode",
        "offset",
        "limit",
        "indentation"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_parallel_tasks",
    "parameters": {
      "type": "object",
      "properties": {
        "subtasks": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "message": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "message",
              "mode"
            ],
            "additionalProperties": false
          }
        },
        "maxConcurrency": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "subtasks",
        "maxConcurrency"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_slash_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "skill",
    "parameters": {
      "type": "object",
      "properties": {
        "skill": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "skill",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_replace",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit_file",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "expected_replacements": {
          "type": "number",
          "minimum": 1
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "expected_replacements"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "replace_all": {
          "type": "boolean",
          "default": false
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "replace_all"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "regex": {
          "type": "string"
        },
        "file_pattern": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "path",
        "regex",
        "file_pattern"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "switch_mode",
    "parameters": {
      "type": "object",
      "properties": {
        "mode_slug": {
          "type": "string"
        },
        "reason": {
          "type": "string"
        }
      },
      "required": [
        "mode_slug",
        "reason"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "tools_load",
    "parameters": {
      "type": "object",
      "properties": {
        "names": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1
        }
      },
      "required": [
        "names"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "update_todo_list",
    "parameters": {
      "type": "object",
      "properties": {
        "todos": {
          "type": "string"
        }
      },
      "required": [
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_fetch",
    "parameters": {
      "type": "object",
      "properties": {
        "url": {
          "type": "string"
        }
      },
      "required": [
        "url"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_search",
    "parameters": {
      "type": "object",
      "properties": {
        "queries": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "queries"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "write_to_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "content": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_task_history",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "max_results": {
          "type": "number"
        }
      },
      "required": [
        "query",
        "max_results"
      ],
      "additionalProperties": false
    },
    "strict": true
  }
]"
`;

exports[`strict tool schema characterization (API-3) > native tools > OpenAiNativeHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "access_mcp_resource",
    "parameters": {
      "type": "object",
      "properties": {
        "server_name": {
          "type": "string"
        },
        "uri": {
          "type": "string"
        }
      },
      "required": [
        "server_name",
        "uri"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_diff",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "diff": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "diff"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_patch",
    "parameters": {
      "type": "object",
      "properties": {
        "patch": {
          "type": "string"
        }
      },
      "required": [
        "patch"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "ask_followup_question",
    "parameters": {
      "type": "object",
      "properties": {
        "question": {
          "type": "string"
        },
        "follow_up": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "text": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "text",
              "mode"
            ],
            "additionalProperties": false
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "question",
        "follow_up"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "attempt_completion",
    "parameters": {
      "type": "object",
      "properties": {
        "result": {
          "type": "string"
        }
      },
      "required": [
        "result"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "codebase_search",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "path": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "query",
        "path"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "execute_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "timeout": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "cwd",
        "timeout"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "generate_image",
    "parameters": {
      "type": "object",
      "properties": {
        "prompt": {
          "type": "string"
        },
        "path": {
          "type": "string"
        },
        "image": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "prompt",
        "path",
        "image"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "list_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "recursive": {
          "type": "boolean"
        }
      },
      "required": [
        "path",
        "recursive"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "new_task",
    "parameters": {
      "type": "object",
      "properties": {
        "mode": {
          "type": "string"
        },
        "message": {
          "type": "string"
        },
        "todos": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "mode",
        "message",
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_artifact",
    "parameters": {
      "type": "object",
      "properties": {
        "artifact_id": {
          "type": "string"
        },
        "search": {
          "type": "string"
        },
        "offset": {
          "type": "number"
        },
        "limit": {
          "type": "number"
        }
      },
      "required": [
        "artifact_id",
        "search",
        "offset",
        "limit"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "mode": {
          "type": "string",
          "enum": [
            "slice",
            "indentation"
          ]
        },
        "offset": {
          "type": "integer"
        },
        "limit": {
          "type": "integer"
        },
        "indentation": {
          "type": "object",
          "properties": {
            "anchor_line": {
              "type": "integer"
            },
            "max_levels": {
              "type": "integer"
            },
            "include_siblings": {
              "type": "boolean"
            },
            "include_header": {
              "type": "boolean"
            },
            "max_lines": {
              "type": "integer"
            }
          },
          "required": [
            "anchor_line",
            "max_levels",
            "include_siblings",
            "include_header",
            "max_lines"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "path",
        "mode",
        "offset",
        "limit",
        "indentation"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_parallel_tasks",
    "parameters": {
      "type": "object",
      "properties": {
        "subtasks": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "message": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "message",
              "mode"
            ],
            "additionalProperties": false
          }
        },
        "maxConcurrency": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "subtasks",
        "maxConcurrency"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_slash_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "skill",
    "parameters": {
      "type": "object",
      "properties": {
        "skill": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "skill",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_replace",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit_file",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "expected_replacements": {
          "type": "number",
          "minimum": 1
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "expected_replacements"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "replace_all": {
          "type": "boolean",
          "default": false
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "replace_all"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "regex": {
          "type": "string"
        },
        "file_pattern": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "path",
        "regex",
        "file_pattern"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "switch_mode",
    "parameters": {
      "type": "object",
      "properties": {
        "mode_slug": {
          "type": "string"
        },
        "reason": {
          "type": "string"
        }
      },
      "required": [
        "mode_slug",
        "reason"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "tools_load",
    "parameters": {
      "type": "object",
      "properties": {
        "names": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1
        }
      },
      "required": [
        "names"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "update_todo_list",
    "parameters": {
      "type": "object",
      "properties": {
        "todos": {
          "type": "string"
        }
      },
      "required": [
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_fetch",
    "parameters": {
      "type": "object",
      "properties": {
        "url": {
          "type": "string"
        }
      },
      "required": [
        "url"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_search",
    "parameters": {
      "type": "object",
      "properties": {
        "queries": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "queries"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "write_to_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "content": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_task_history",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "max_results": {
          "type": "number"
        }
      },
      "required": [
        "query",
        "max_results"
      ],
      "additionalProperties": false
    },
    "strict": true
  }
]"
`;

exports[`strict tool schema characterization (API-3) > nativeWithImages tools > BaseProvider (Chat Completions providers) output is unchanged 1`] = `
"[
  {
    "type": "function",
    "function": {
      "name": "access_mcp_resource",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "server_name": {
            "type": "string"
          },
          "uri": {
            "type": "string"
          }
        },
        "required": [
          "server_name",
          "uri"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "apply_diff",
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "diff": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "diff"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "apply_patch",
      "parameters": {
        "type": "object",
        "properties": {
          "patch": {
            "type": "string"
          }
        },
        "required": [
          "patch"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "ask_followup_question",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "question": {
            "type": "string"
          },
          "follow_up": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "text": {
                  "type": "string"
                },
                "mode": {
                  "type": "string"
                }
              },
              "required": [
                "text",
                "mode"
              ],
              "additionalProperties": false
            },
            "minItems": 1,
            "maxItems": 4
          }
        },
        "required": [
          "question",
          "follow_up"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "attempt_completion",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "result": {
            "type": "string"
          }
        },
        "required": [
          "result"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "codebase_search",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          },
          "path": {
            "type": "string"
          }
        },
        "required": [
          "query",
          "path"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "execute_command",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "command": {
            "type": "string"
          },
          "cwd": {
            "type": "string"
          },
          "timeout": {
            "type": "number"
          }
        },
        "required": [
          "command",
          "cwd",
          "timeout"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "generate_image",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "prompt": {
            "type": "string"
          },
          "path": {
            "type": "string"
          },
          "image": {
            "type": "string"
          }
        },
        "required": [
          "prompt",
          "path",
          "image"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "list_files",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "recursive": {
            "type": "boolean"
          }
        },
        "required": [
          "path",
          "recursive"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "new_task",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "mode": {
            "type": "string"
          },
          "message": {
            "type": "string"
          },
          "todos": {
            "type": "string"
          }
        },
        "required": [
          "mode",
          "message",
          "todos"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "read_artifact",
      "parameters": {
        "type": "object",
        "properties": {
          "artifact_id": {
            "type": "string"
          },
          "search": {
            "type": "string"
          },
          "offset": {
            "type": "number"
          },
          "limit": {
            "type": "number"
          }
        },
        "required": [
          "artifact_id",
          "search",
          "offset",
          "limit"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "read_file",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "mode": {
            "type": "string",
            "enum": [
              "slice",
              "indentation"
            ]
          },
          "offset": {
            "type": "integer"
          },
          "limit": {
            "type": "integer"
          },
          "indentation": {
            "type": "object",
            "properties": {
              "anchor_line": {
                "type": "integer"
              },
              "max_levels": {
                "type": "integer"
              },
              "include_siblings": {
                "type": "boolean"
              },
              "include_header": {
                "type": "boolean"
              },
              "max_lines": {
                "type": "integer"
              }
            },
            "required": [
              "anchor_line",
              "max_levels",
              "include_siblings",
              "include_header",
              "max_lines"
            ],
            "additionalProperties": false
          }
        },
        "required": [
          "path",
          "mode",
          "offset",
          "limit",
          "indentation"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "run_parallel_tasks",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "subtasks": {
            "type": "array",
            "items": {
              "type": "object",
              "properties": {
                "message": {
                  "type": "string"
                },
                "mode": {
                  "type": "string"
                }
              },
              "required": [
                "message",
                "mode"
              ],
              "additionalProperties": false
            }
          },
          "maxConcurrency": {
            "type": "number"
          }
        },
        "required": [
          "subtasks",
          "maxConcurrency"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "run_slash_command",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "command": {
            "type": "string"
          },
          "args": {
            "type": "string"
          }
        },
        "required": [
          "command",
          "args"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "skill",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "skill": {
            "type": "string"
          },
          "args": {
            "type": "string"
          }
        },
        "required": [
          "skill",
          "args"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_replace",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "edit_file",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          },
          "expected_replacements": {
            "type": "number",
            "minimum": 1
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string",
          "expected_replacements"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "edit",
      "parameters": {
        "type": "object",
        "properties": {
          "file_path": {
            "type": "string"
          },
          "old_string": {
            "type": "string"
          },
          "new_string": {
            "type": "string"
          },
          "replace_all": {
            "type": "boolean",
            "default": false
          }
        },
        "required": [
          "file_path",
          "old_string",
          "new_string",
          "replace_all"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_files",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "regex": {
            "type": "string"
          },
          "file_pattern": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "regex",
          "file_pattern"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "switch_mode",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "mode_slug": {
            "type": "string"
          },
          "reason": {
            "type": "string"
          }
        },
        "required": [
          "mode_slug",
          "reason"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "tools_load",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "names": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "minItems": 1
          }
        },
        "required": [
          "names"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "update_todo_list",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "todos": {
            "type": "string"
          }
        },
        "required": [
          "todos"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "web_fetch",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "url": {
            "type": "string"
          }
        },
        "required": [
          "url"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "web_search",
      "parameters": {
        "type": "object",
        "properties": {
          "queries": {
            "type": "array",
            "items": {
              "type": "string"
            },
            "minItems": 1,
            "maxItems": 4
          }
        },
        "required": [
          "queries"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  },
  {
    "type": "function",
    "function": {
      "name": "write_to_file",
      "strict": true,
      "parameters": {
        "type": "object",
        "properties": {
          "path": {
            "type": "string"
          },
          "content": {
            "type": "string"
          }
        },
        "required": [
          "path",
          "content"
        ],
        "additionalProperties": false
      }
    }
  },
  {
    "type": "function",
    "function": {
      "name": "search_task_history",
      "parameters": {
        "type": "object",
        "properties": {
          "query": {
            "type": "string"
          },
          "max_results": {
            "type": "number"
          }
        },
        "required": [
          "query",
          "max_results"
        ],
        "additionalProperties": false
      },
      "strict": true
    }
  }
]"
`;

exports[`strict tool schema characterization (API-3) > nativeWithImages tools > OpenAiCodexHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "access_mcp_resource",
    "parameters": {
      "type": "object",
      "properties": {
        "server_name": {
          "type": "string"
        },
        "uri": {
          "type": "string"
        }
      },
      "required": [
        "server_name",
        "uri"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_diff",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "diff": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "diff"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_patch",
    "parameters": {
      "type": "object",
      "properties": {
        "patch": {
          "type": "string"
        }
      },
      "required": [
        "patch"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "ask_followup_question",
    "parameters": {
      "type": "object",
      "properties": {
        "question": {
          "type": "string"
        },
        "follow_up": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "text": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "text",
              "mode"
            ],
            "additionalProperties": false
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "question",
        "follow_up"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "attempt_completion",
    "parameters": {
      "type": "object",
      "properties": {
        "result": {
          "type": "string"
        }
      },
      "required": [
        "result"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "codebase_search",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "path": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "query",
        "path"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "execute_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "timeout": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "cwd",
        "timeout"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "generate_image",
    "parameters": {
      "type": "object",
      "properties": {
        "prompt": {
          "type": "string"
        },
        "path": {
          "type": "string"
        },
        "image": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "prompt",
        "path",
        "image"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "list_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "recursive": {
          "type": "boolean"
        }
      },
      "required": [
        "path",
        "recursive"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "new_task",
    "parameters": {
      "type": "object",
      "properties": {
        "mode": {
          "type": "string"
        },
        "message": {
          "type": "string"
        },
        "todos": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "mode",
        "message",
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_artifact",
    "parameters": {
      "type": "object",
      "properties": {
        "artifact_id": {
          "type": "string"
        },
        "search": {
          "type": "string"
        },
        "offset": {
          "type": "number"
        },
        "limit": {
          "type": "number"
        }
      },
      "required": [
        "artifact_id",
        "search",
        "offset",
        "limit"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "mode": {
          "type": "string",
          "enum": [
            "slice",
            "indentation"
          ]
        },
        "offset": {
          "type": "integer"
        },
        "limit": {
          "type": "integer"
        },
        "indentation": {
          "type": "object",
          "properties": {
            "anchor_line": {
              "type": "integer"
            },
            "max_levels": {
              "type": "integer"
            },
            "include_siblings": {
              "type": "boolean"
            },
            "include_header": {
              "type": "boolean"
            },
            "max_lines": {
              "type": "integer"
            }
          },
          "required": [
            "anchor_line",
            "max_levels",
            "include_siblings",
            "include_header",
            "max_lines"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "path",
        "mode",
        "offset",
        "limit",
        "indentation"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_parallel_tasks",
    "parameters": {
      "type": "object",
      "properties": {
        "subtasks": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "message": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "message",
              "mode"
            ],
            "additionalProperties": false
          }
        },
        "maxConcurrency": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "subtasks",
        "maxConcurrency"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_slash_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "skill",
    "parameters": {
      "type": "object",
      "properties": {
        "skill": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "skill",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_replace",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit_file",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "expected_replacements": {
          "type": "number",
          "minimum": 1
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "expected_replacements"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "replace_all": {
          "type": "boolean",
          "default": false
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "replace_all"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "regex": {
          "type": "string"
        },
        "file_pattern": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "path",
        "regex",
        "file_pattern"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "switch_mode",
    "parameters": {
      "type": "object",
      "properties": {
        "mode_slug": {
          "type": "string"
        },
        "reason": {
          "type": "string"
        }
      },
      "required": [
        "mode_slug",
        "reason"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "tools_load",
    "parameters": {
      "type": "object",
      "properties": {
        "names": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1
        }
      },
      "required": [
        "names"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "update_todo_list",
    "parameters": {
      "type": "object",
      "properties": {
        "todos": {
          "type": "string"
        }
      },
      "required": [
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_fetch",
    "parameters": {
      "type": "object",
      "properties": {
        "url": {
          "type": "string"
        }
      },
      "required": [
        "url"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_search",
    "parameters": {
      "type": "object",
      "properties": {
        "queries": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "queries"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "write_to_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "content": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_task_history",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "max_results": {
          "type": "number"
        }
      },
      "required": [
        "query",
        "max_results"
      ],
      "additionalProperties": false
    },
    "strict": true
  }
]"
`;

exports[`strict tool schema characterization (API-3) > nativeWithImages tools > OpenAiNativeHandler request tools are unchanged 1`] = `
"[
  {
    "type": "function",
    "name": "access_mcp_resource",
    "parameters": {
      "type": "object",
      "properties": {
        "server_name": {
          "type": "string"
        },
        "uri": {
          "type": "string"
        }
      },
      "required": [
        "server_name",
        "uri"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_diff",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "diff": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "diff"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "apply_patch",
    "parameters": {
      "type": "object",
      "properties": {
        "patch": {
          "type": "string"
        }
      },
      "required": [
        "patch"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "ask_followup_question",
    "parameters": {
      "type": "object",
      "properties": {
        "question": {
          "type": "string"
        },
        "follow_up": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "text": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "text",
              "mode"
            ],
            "additionalProperties": false
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "question",
        "follow_up"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "attempt_completion",
    "parameters": {
      "type": "object",
      "properties": {
        "result": {
          "type": "string"
        }
      },
      "required": [
        "result"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "codebase_search",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "path": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "query",
        "path"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "execute_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "cwd": {
          "type": [
            "string",
            "null"
          ]
        },
        "timeout": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "cwd",
        "timeout"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "generate_image",
    "parameters": {
      "type": "object",
      "properties": {
        "prompt": {
          "type": "string"
        },
        "path": {
          "type": "string"
        },
        "image": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "prompt",
        "path",
        "image"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "list_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "recursive": {
          "type": "boolean"
        }
      },
      "required": [
        "path",
        "recursive"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "new_task",
    "parameters": {
      "type": "object",
      "properties": {
        "mode": {
          "type": "string"
        },
        "message": {
          "type": "string"
        },
        "todos": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "mode",
        "message",
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_artifact",
    "parameters": {
      "type": "object",
      "properties": {
        "artifact_id": {
          "type": "string"
        },
        "search": {
          "type": "string"
        },
        "offset": {
          "type": "number"
        },
        "limit": {
          "type": "number"
        }
      },
      "required": [
        "artifact_id",
        "search",
        "offset",
        "limit"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "read_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "mode": {
          "type": "string",
          "enum": [
            "slice",
            "indentation"
          ]
        },
        "offset": {
          "type": "integer"
        },
        "limit": {
          "type": "integer"
        },
        "indentation": {
          "type": "object",
          "properties": {
            "anchor_line": {
              "type": "integer"
            },
            "max_levels": {
              "type": "integer"
            },
            "include_siblings": {
              "type": "boolean"
            },
            "include_header": {
              "type": "boolean"
            },
            "max_lines": {
              "type": "integer"
            }
          },
          "required": [
            "anchor_line",
            "max_levels",
            "include_siblings",
            "include_header",
            "max_lines"
          ],
          "additionalProperties": false
        }
      },
      "required": [
        "path",
        "mode",
        "offset",
        "limit",
        "indentation"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_parallel_tasks",
    "parameters": {
      "type": "object",
      "properties": {
        "subtasks": {
          "type": "array",
          "items": {
            "type": "object",
            "properties": {
              "message": {
                "type": "string"
              },
              "mode": {
                "type": [
                  "string",
                  "null"
                ]
              }
            },
            "required": [
              "message",
              "mode"
            ],
            "additionalProperties": false
          }
        },
        "maxConcurrency": {
          "type": [
            "number",
            "null"
          ]
        }
      },
      "required": [
        "subtasks",
        "maxConcurrency"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "run_slash_command",
    "parameters": {
      "type": "object",
      "properties": {
        "command": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "command",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "skill",
    "parameters": {
      "type": "object",
      "properties": {
        "skill": {
          "type": "string"
        },
        "args": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "skill",
        "args"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_replace",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit_file",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "expected_replacements": {
          "type": "number",
          "minimum": 1
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "expected_replacements"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "edit",
    "parameters": {
      "type": "object",
      "properties": {
        "file_path": {
          "type": "string"
        },
        "old_string": {
          "type": "string"
        },
        "new_string": {
          "type": "string"
        },
        "replace_all": {
          "type": "boolean",
          "default": false
        }
      },
      "required": [
        "file_path",
        "old_string",
        "new_string",
        "replace_all"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_files",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "regex": {
          "type": "string"
        },
        "file_pattern": {
          "type": [
            "string",
            "null"
          ]
        }
      },
      "required": [
        "path",
        "regex",
        "file_pattern"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "switch_mode",
    "parameters": {
      "type": "object",
      "properties": {
        "mode_slug": {
          "type": "string"
        },
        "reason": {
          "type": "string"
        }
      },
      "required": [
        "mode_slug",
        "reason"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "tools_load",
    "parameters": {
      "type": "object",
      "properties": {
        "names": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1
        }
      },
      "required": [
        "names"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "update_todo_list",
    "parameters": {
      "type": "object",
      "properties": {
        "todos": {
          "type": "string"
        }
      },
      "required": [
        "todos"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_fetch",
    "parameters": {
      "type": "object",
      "properties": {
        "url": {
          "type": "string"
        }
      },
      "required": [
        "url"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "web_search",
    "parameters": {
      "type": "object",
      "properties": {
        "queries": {
          "type": "array",
          "items": {
            "type": "string"
          },
          "minItems": 1,
          "maxItems": 4
        }
      },
      "required": [
        "queries"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "write_to_file",
    "parameters": {
      "type": "object",
      "properties": {
        "path": {
          "type": "string"
        },
        "content": {
          "type": "string"
        }
      },
      "required": [
        "path",
        "content"
      ],
      "additionalProperties": false
    },
    "strict": true
  },
  {
    "type": "function",
    "name": "search_task_history",
    "parameters": {
      "type": "object",
      "properties": {
        "query": {
          "type": "string"
        },
        "max_results": {
          "type": "number"
        }
      },
      "required": [
        "query",
        "max_results"
      ],
      "additionalProperties": false
    },
    "strict": true
  }
]"
`;
